Cmds/k8s/yaml_files/Deploy/devops1.yaml
# backend-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ishrakadit07/mern-docker-api
          ports:
            - containerPort: 8000
---
# backend-service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 
      targetPort: 8000
  type: LoadBalancer
---
# client-deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ishrakadit07/mern-docker-web
          ports:
            - containerPort: 5173
---
# client-service
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: NodePort
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 30001
  selector:
    app: client
